Fix for IE content overflow to wrap

--- a/app/scss/3-views/applications/manage.scss
+++ b/app/scss/3-views/applications/manage.scss
@@ -2,7 +2,6 @@
     display:flex;
     color:$cui-font-color2;
     justify-content:flex-start;
-    word-break:break-word;
     flex-wrap: wrap;
     .cui-tile{
         border:1px solid $cui-primary-colors--medium;
@@ -61,7 +60,7 @@
         font-size: 1em;
         letter-spacing: 1.4px;
         padding-top: 0.5em;
-        word-break:break-all;
+        max-width:100%
     }
     .cui-tile__footer{
         @extend %flex-row;
